# fluxion

./: .gitignore  .mcp.json  Cargo.toml  README.md  mcp.json  mcp.json.example
.github/workflows/: ci.yml
components/alloc-bomb/: Cargo.toml
components/alloc-bomb/src/: lib.rs
components/file-reader/: Cargo.toml
components/file-reader/src/: lib.rs
components/hello/: Cargo.toml
components/hello/src/: bindings.rs  lib.rs
components/hello/wit/: world.wit
components/network-probe/: Cargo.toml
components/network-probe/src/: lib.rs
components/pipeline-stage/: Cargo.toml
components/pipeline-stage/src/: lib.rs
components/spin/: Cargo.toml
components/spin/src/: lib.rs
crates/fluxion-cli/: Cargo.toml
crates/fluxion-cli/src/: main.rs  mcp.rs  telemetry.rs
crates/fluxion-core/: Cargo.toml
crates/fluxion-core/src/: dag.rs  lib.rs  runner.rs  state.rs  store.rs  workflow.rs
crates/fluxion-host/: Cargo.toml
crates/fluxion-host/src/: lib.rs  scheduler.rs
crates/fluxion-host/tests/: e2e.rs
docs/: data-model.md  implementation-guide.md  spec.md  tech-stack.md
docs/adr/: ADR-001-language-choice.md  ADR-002-wasm-runtime.md  ADR-003-wasi-version.md  ADR-004-persistence.md
examples/: memory-limits-demo.yaml  network-sandbox.yaml  resource-limits-demo.yaml  sandbox-demo.yaml  three-stage.yaml  vehicle-pipeline.yaml
