[workspace]
members = [
    "crates/fluxion-cli",
    "crates/fluxion-core",
    "crates/fluxion-host",
]
exclude = ["components/hello", "components/file-reader"]
resolver = "2"

[workspace.dependencies]
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.28"
opentelemetry         = "0.27"
opentelemetry_sdk     = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-stdout  = "0.27"
rusqlite   = { version = "0.31", features = ["bundled"] }
clap       = { version = "4", features = ["derive"] }
wasmtime   = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"
cap-std       = "3"
