[package]
name = "fluxion-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fluxion"
path = "src/main.rs"

[dependencies]
anyhow        = { workspace = true }
clap          = { workspace = true }
tokio         = { workspace = true }
fluxion-core  = { path = "../fluxion-core" }
fluxion-host  = { path = "../fluxion-host" }
