[package]
name = "fluxion-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fluxion"
path = "src/main.rs"

[dependencies]
anyhow                = { workspace = true }
clap                  = { workspace = true }
serde_json            = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-stdout  = { workspace = true }
fluxion-core          = { path = "../fluxion-core" }
fluxion-host          = { path = "../fluxion-host" }
