[package]
name = "fluxion-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow        = { workspace = true }
cap-std       = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
wasmtime      = { workspace = true }
wasmtime-wasi = { workspace = true }
fluxion-core  = { path = "../fluxion-core" }
